better validation and docs
